--- a/SAP-master/view/teachrequirement.html
+++ b/SAP-master/view/teachrequirement.html
@@ -8,39 +8,37 @@
     <title>Dashboard</title>
 
     <!-- Online scripts -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    
-      <!-- Offline scripts -->
-      <link href="admincss/navbar.css" rel="stylesheet">
+
+    <!-- Offline scripts -->
+    <link href="admincss/navbar.css" rel="stylesheet">
 
     <style>
-        .dashboard-item{
-            height:0%;
+        .dashboard-item {
+            height: 0%;
         }
+        
         .list-group {
             height: calc(100% - 50px);
             border-radius: 0 0 6px 6px;
         }
-
+        
         #list-group-report {
             height: calc(100% - 50px);
             border-radius: 0 0 6px 6px;
         }
-
+        
         .list-group>.list-item:last-child {
             border-radius: 0 0 6px 6px;
         }
-
+        
         .list-group>.list-item:not(:first-child) {
             border-top: 1px solid white
         }
-
+        
         .list-item {
             min-height: 60px;
             color: #15343F;
@@ -53,36 +51,38 @@
             flex-direction: column;
             justify-content: center;
         }
-
+        
         .list-item:hover {
             color: white;
             background: #22404F;
-
         }
-
+        
         #module-info-item {
             transition: 1s;
         }
-
+        
         .report-item-wrap p {
             color: #15343F;
             text-align: left;
         }
-        .report-item-wrap:hover .report-item-title{
-            color:white
+        
+        .report-item-wrap:hover .report-item-title {
+            color: white
         }
-        .report-item-wrap:hover .report-item-desc{
-            color:white
+        
+        .report-item-wrap:hover .report-item-desc {
+            color: white
         }
+        
         .report-item-title {
             font-size: 1em;
         }
-
+        
         .report-item-desc {
             font-size: .6em;
             font-weight: lighter;
         }
-
+        
         .download-button {
             background-color: #15343F;
             color: #ffffff;
@@ -91,41 +91,41 @@
             border-radius: 3px;
             font-size: .7em;
         }
-
+        
         #teaching-assignment-title {
             height: 30%
         }
-
+        
         #teaching-assignment-list {
-            height:60px;
+            height: 60px;
             margin: auto;
             position: relative;
-            top:-7px;
+            top: -7px;
             padding: 0;
             width: 70%;
             text-align: center;
-            
         }
-
+        
         .teaching-assignment-list-item {
-
             color: #15343F;
             font-size: .8em;
             font-weight: lighter;
         }
+        
         a {
             text-decoration: none;
         }
     </style>
     <script>
-        $(document).ready(function () {
+        $(document).ready(function() {
             $("#maintenence-system").hover(
-                function () {
+                function() {
                     $('#ul-collapse').addClass("show");
                     $('#caret-down').toggleClass("bi-caret-down-fill").toggleClass("bi-caret-right-fill");
 
 
-                }, function () {
+                },
+                function() {
                     $('#ul-collapse').removeClass("show");
                     $('#caret-down').toggleClass("bi-caret-right-fill").toggleClass("bi-caret-down-fill");
                 }
@@ -140,8 +140,7 @@
             <div id="navbar-card" class="container col-4 col-lg-2 ">
                 <div id="navbar-brand" class="navbar-brand row">
                     <div class="col-3">
-                        <img id="profile-icon" src="https://vengreso.com/wp-content/uploads/2016/03/LinkedIn-Profile-Professional-Picture-Sample-Bernie-Borges.png"
-                            alt="Cinque Terre">
+                        <img id="profile-icon" src="https://vengreso.com/wp-content/uploads/2016/03/LinkedIn-Profile-Professional-Picture-Sample-Bernie-Borges.png" alt="Cinque Terre">
                     </div>
                     <div id="msg-wrap" class="col-9 ">
                         <p>Welcome,</p>
@@ -162,13 +161,10 @@
         <div class="row flex-nowrap">
             <div id="dashboard-wrap" class="col-2">
                 <div class="d-flex flex-column align-items-center align-items-sm-start text-white min-vh-100">
-                    <ul id="main-list"
-                        class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start"
-                        id="menu">
+                    <ul id="main-list" class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                         <li class="nav-item">
                             <a href="home.html" class="nav-link align-middle px-0">
-                                <img src="../SVG Icons/Dashboard.svg" class="icons"></img> <span
-                                    class="nav-item-text d-none d-sm-inline">Dashboard</span>
+                                <img src="../SVG Icons/Dashboard.svg" class="icons"></img> <span class="nav-item-text d-none d-sm-inline">Dashboard</span>
                             </a>
                         </li>
 
@@ -181,10 +177,9 @@
 
                         <li id="maintenence-system">
                             <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                                <img src="../SVG Icons/Update Personal Info Icon.svg" class="icons"></img> <span
-                                    class="nav-item-text d-none d-sm-inline">Update Personal Information
-                                    <!-- System </span><i id="caret-down" class="bi bi-caret-down-fill"></i>  --></a>
-                                    <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <img src="../SVG Icons/Update Personal Info Icon.svg" class="icons"></img> <span class="nav-item-text d-none d-sm-inline">Update Personal Information
+                                    <!-- System </span><i id="caret-down" class="bi bi-caret-down-fill"></i> --></a>
+                            <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item" href="#">Action</a>
                                         <a class="dropdown-item" href="#">Another action</a>
                                         <a class="dropdown-item" href="#">Something else here</a>
@@ -192,21 +187,18 @@
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0">
-                                <img src="../SVG Icons/Select Module Pref.svg" class="icons"></img> <span
-                                    class="nav-item-text d-none d-sm-inline">Choose Module Preference</span>
+                                <img src="../SVG Icons/Select Module Pref.svg" class="icons"></img> <span class="nav-item-text d-none d-sm-inline">Choose Module Preference</span>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="#" class="nav-link align-middle px-0">
-                                <img src="../SVG Icons/Assigned Module.svg" class="icons"></img> <span
-                                    class="nav-item-text d-none d-sm-inline">View Assigned Module</span>
+                                <img src="../SVG Icons/Assigned Module.svg" class="icons"></img> <span class="nav-item-text d-none d-sm-inline">View Assigned Module</span>
                             </a>
                         </li>
 
                         <li class="nav-item">
                             <a href="changepassword.html" class="nav-link align-middle px-0">
-                                <img src="../SVG Icons/Lock Icon.svg" class="icons"></img> <span
-                                    class="nav-item-text d-none d-sm-inline">Change Password</span>
+                                <img src="../SVG Icons/Lock Icon.svg" class="icons"></img> <span class="nav-item-text d-none d-sm-inline">Change Password</span>
                             </a>
                         </li>
 
@@ -226,7 +218,7 @@
                                         <div class="d-flex justify-content-between">
                                             <div class="form-content">
                                                 <p class="form-subtitle">Unavailable Teaching Slots</p>
-                                                <div class="table-responsive"> 
+                                                <div class="table-responsive">
                                                     <table class="table form-table table-striped">
                                                         <thead class="table">
                                                             <tr>
